--- a/SIIM_project/make_folds.ipynb
+++ b/SIIM_project/make_folds.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yaroslav/anaconda3/lib/python3.6/site-packages/dicom/__init__.py:53: UserWarning: \n",
+      "This code is using an older version of pydicom, which is no longer \n",
+      "maintained as of Jan 2017.  You can access the new pydicom features and API \n",
+      "by installing `pydicom` from PyPI.\n",
+      "See 'Transitioning to pydicom 1.x' section at pydicom.readthedocs.org \n",
+      "for more information.\n",
+      "\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de6bb33a74a64c1d8e5905490cdd146a",
+       "model_id": "8a6a34fc669b4e48b99caf5a3354af47",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "A Jupyter Widget"
       ]
      },
      "metadata": {},
@@ -39,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path = '/raid/data/decathlon/Task07_Pancreas'"
@@ -48,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ids = [x for x in os.listdir(os.path.join(path, 'imagesTr')) if x.endswith('.gz') and not x.startswith('._panc')]"
@@ -57,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folds = pd.DataFrame(ids, columns=['ImageId'])"
@@ -97,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names, numbers = [], []\n",
@@ -110,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folds = pd.DataFrame(numbers, names).reset_index()\n",
@@ -121,6 +145,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -136,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folds['fold'] = folds.ImageId.map(fold_mapping)"
@@ -145,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folds.to_csv('/raid/data/decathlon/Task07_Pancreas/folds.csv', index=False)"
@@ -174,7 +203,230 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10675\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>EncodedPixels</th>\n",
+       "      <th>label</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.32484.15178751...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.2940.151787517...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.11591.15178752...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.32265.15178751...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.12570.15178752...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             ImageId  EncodedPixels  label  \\\n",
+       "0  1.2.276.0.7230010.3.1.4.8323329.32484.15178751...             -1      0   \n",
+       "1  1.2.276.0.7230010.3.1.4.8323329.2940.151787517...             -1      0   \n",
+       "2  1.2.276.0.7230010.3.1.4.8323329.11591.15178752...             -1      0   \n",
+       "3  1.2.276.0.7230010.3.1.4.8323329.32265.15178751...             -1      0   \n",
+       "4  1.2.276.0.7230010.3.1.4.8323329.12570.15178752...             -1      0   \n",
+       "\n",
+       "   fold  \n",
+       "0     0  \n",
+       "1     1  \n",
+       "2     2  \n",
+       "3     3  \n",
+       "4     4  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv = pd.read_csv(\"/Users/yaroslav/Documents/github/SIIM_Nikita_branch/V2/SIIM/SIIM/train.csv\")\n",
+    "print(len(test_csv))\n",
+    "test_csv.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1068\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>EncodedPixels</th>\n",
+       "      <th>label</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.32484.15178751...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.11367.15178752...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.13160.15178752...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.2823.151787517...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1.2.276.0.7230010.3.1.4.8323329.2657.151787517...</td>\n",
+       "      <td>202669 17 997 37 977 49 970 56 963 63 956 71 ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              ImageId  \\\n",
+       "0   1.2.276.0.7230010.3.1.4.8323329.32484.15178751...   \n",
+       "10  1.2.276.0.7230010.3.1.4.8323329.11367.15178752...   \n",
+       "20  1.2.276.0.7230010.3.1.4.8323329.13160.15178752...   \n",
+       "30  1.2.276.0.7230010.3.1.4.8323329.2823.151787517...   \n",
+       "40  1.2.276.0.7230010.3.1.4.8323329.2657.151787517...   \n",
+       "\n",
+       "                                        EncodedPixels  label  fold  \n",
+       "0                                                  -1      0     0  \n",
+       "10                                                 -1      0     0  \n",
+       "20                                                 -1      0     0  \n",
+       "30                                                 -1      0     0  \n",
+       "40   202669 17 997 37 977 49 970 56 963 63 956 71 ...      1     0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv = test_csv[test_csv[\"fold\"]==0]\n",
+    "print(len(test_csv))\n",
+    "test_csv.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -195,15 +447,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
